Radio Button Demo

--- a/projects/components-demo/src/app/demos/demo-checkbox/demo-checkbox.component.html
+++ b/projects/components-demo/src/app/demos/demo-checkbox/demo-checkbox.component.html
@@ -86,7 +86,7 @@
         <tr>
           <td>OnClick</td>
           <td>isChecked: Boolean value set by event emitters dictating the state of the checkbox.</td>
-          <td>Notifies changes to the checkbox service on the checked status.</td>
+          <td>Notifies changes to the <code>CheckboxService</code> on the checked status.</td>
         </tr>
       </table>
 
