--- a/projects/devpro-components/src/lib/radio-button/radio-button.component.html
+++ b/projects/devpro-components/src/lib/radio-button/radio-button.component.html
@@ -3,7 +3,7 @@
        [checked]="isChecked"
        [disabled]="disabled">
 
-<label class="label-wrapper" (click)="onChecked()">
+<label class="radio-button-wrapper" (click)="onChecked()">
   <span class="radio-button"></span>
-  <span class="button-label">{{ label }}</span>
+  <span class="radio-button-label">{{ label }}</span>
 </label>
