--- a/projects/devpro-components/src/lib/radio-button/radio-button.component.scss
+++ b/projects/devpro-components/src/lib/radio-button/radio-button.component.scss
@@ -10,7 +10,7 @@ input[type="radio"] {
   pointer-events: none;
 }
 
-:host[disabled='true'] .button-label {
+:host[disabled='true'] .radio-button-label {
     background-color: rgba(229, 231, 235, 1); // Gray 200
 }
 
@@ -47,7 +47,7 @@ input[type="radio"]:checked + label .radio-button {
   box-shadow: 0px 0px 0px 3px white inset;
 }
 
-.label-wrapper {
+.radio-button-wrapper {
   display: inline-flex;
   align-items: center;
   cursor: pointer;
