Added file names to the code block component.

--- a/projects/components-demo/src/app/codeblock/codeblock.component.html
+++ b/projects/components-demo/src/app/codeblock/codeblock.component.html
@@ -1,4 +1,5 @@
-<!-- TODO: Add a title bar for displaying the file's name above or within the codeblock. Only display if there is a name. -->
+<div class="noNameSpacer" *ngIf="!fileName"></div>
+<div class="fileName" *ngIf="fileName">{{ fileName }}</div>
 <div class="code-wrapper">
   <ng-content></ng-content>
 </div>
