--- a/projects/components-demo/src/app/demos/demo-alert/demo-alert.component.html
+++ b/projects/components-demo/src/app/demos/demo-alert/demo-alert.component.html
@@ -156,8 +156,8 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
-      <app-codeblock>{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-alert.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-alert.component.ts">{{ codeTS }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
