--- a/projects/components-demo/src/app/demos/demo-button/demo-button.component.html
+++ b/projects/components-demo/src/app/demos/demo-button/demo-button.component.html
@@ -157,7 +157,7 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-button.component.html">{{ codeHTML }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
