--- a/projects/components-demo/src/app/demos/demo-checkbox/demo-checkbox.component.html
+++ b/projects/components-demo/src/app/demos/demo-checkbox/demo-checkbox.component.html
@@ -128,8 +128,8 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
-      <app-codeblock>{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-checkbox.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-checkbox.component.ts">{{ codeTS }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
