--- a/projects/components-demo/src/app/demos/demo-dialog/demo-dialog.component.html
+++ b/projects/components-demo/src/app/demos/demo-dialog/demo-dialog.component.html
@@ -113,12 +113,12 @@
         library.
       </p>
       <h4>Dialog Demo Source</h4>
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
-      <app-codeblock>{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-dialog.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-dialog.component.ts">{{ codeTS }}</app-codeblock>
 
       <h4>Random Component Source</h4>
-      <app-codeblock>{{ codeHTMLRandom }}</app-codeblock>
-      <app-codeblock>{{ codeTSRandom }}</app-codeblock>
+      <app-codeblock fileName="random-component.component.html">{{ codeHTMLRandom }}</app-codeblock>
+      <app-codeblock fileName="random-component.component.ts">{{ codeTSRandom }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
