--- a/projects/components-demo/src/app/demos/demo-multiselect/demo-multiselect.component.html
+++ b/projects/components-demo/src/app/demos/demo-multiselect/demo-multiselect.component.html
@@ -121,8 +121,8 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
-      <app-codeblock>{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-multiselect.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-multiselect.component.ts">{{ codeTS }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
