--- a/projects/components-demo/src/app/demos/demo-overflow-menu/demo-overflow-menu.component.html
+++ b/projects/components-demo/src/app/demos/demo-overflow-menu/demo-overflow-menu.component.html
@@ -92,9 +92,9 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
-      <app-codeblock>{{ codeTS }}</app-codeblock>
-      <app-codeblock>{{ codeCSS }}</app-codeblock>
+      <app-codeblock fileName="demo-overflow-menu.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-overflow-menu.component.ts">{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-overflow-menu.component.scss">{{ codeCSS }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
