--- a/projects/components-demo/src/app/demos/demo-sidenav/demo-sidenav.component.html
+++ b/projects/components-demo/src/app/demos/demo-sidenav/demo-sidenav.component.html
@@ -139,8 +139,8 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
-      <app-codeblock>{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-sidenav.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-sidenav.component.ts">{{ codeTS }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
