--- a/projects/components-demo/src/app/setup/setup.component.html
+++ b/projects/components-demo/src/app/setup/setup.component.html
@@ -22,7 +22,7 @@
 <div>
   <h3>Styles</h3>
   <p class="desc">The library requires a base css dependency.
-    Import the <code>base.css</code> file into your projects angular.json:
+    Import the <code>base.css</code> file into your projects <code>angular.json</code> file.
   </p>
   <app-codeblock>{{ codeStyles }}</app-codeblock>
 </div>
