--- a/projects/components-demo/src/app/codeblock/codeblock.component.scss
+++ b/projects/components-demo/src/app/codeblock/codeblock.component.scss
@@ -2,13 +2,29 @@
   white-space: pre;
 }
 
+.noNameSpacer {
+  margin-top: 1rem;
+}
+
 .code-wrapper {
-  display: block;
-  margin: 1rem;
   border-width: 0 0 0 0.75rem;
   border-style: solid;
   border-color: #9999;
   background-color: #EEEEEE;
   padding-bottom: 1rem;
   font-family: Consolas, "courier new";
+}
+
+.fileName {
+  display: inline-block;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  margin-top: 1rem;
+  bottom: 0;
+  border-width: 0 0 0 0.75rem;
+  border-style: solid;
+  border-color: #9999;
+  color: rgba(59, 130, 246, 1);
+  background-color: #EEEEEE;
 }
