--- a/projects/components-demo/src/app/demos/demo-chip/demo-chip.component.html
+++ b/projects/components-demo/src/app/demos/demo-chip/demo-chip.component.html
@@ -83,7 +83,7 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-chip.component.html">{{ codeHTML }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
