--- a/projects/components-demo/src/app/demos/demo-date-picker/demo-date-picker.component.html
+++ b/projects/components-demo/src/app/demos/demo-date-picker/demo-date-picker.component.html
@@ -112,8 +112,8 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
-      <app-codeblock>{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-date-picker.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-date-picker.component.ts">{{ codeTS }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
