--- a/projects/components-demo/src/app/demos/demo-select/demo-select.component.html
+++ b/projects/components-demo/src/app/demos/demo-select/demo-select.component.html
@@ -125,8 +125,8 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
-      <app-codeblock>{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-select.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-select.component.ts">{{ codeTS }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
