--- a/projects/components-demo/src/app/demos/demo-slide-toggle/demo-slide-toggle.component.html
+++ b/projects/components-demo/src/app/demos/demo-slide-toggle/demo-slide-toggle.component.html
@@ -147,8 +147,8 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
-      <app-codeblock>{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-slide-toggle.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-slide-toggle.component.ts">{{ codeTS }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
