--- a/projects/components-demo/src/app/demos/demo-spinner/demo-spinner.component.html
+++ b/projects/components-demo/src/app/demos/demo-spinner/demo-spinner.component.html
@@ -107,7 +107,7 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-spinner.component.html">{{ codeHTML }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
