--- a/projects/components-demo/src/app/demos/demo-tabs/demo-tabs.component.html
+++ b/projects/components-demo/src/app/demos/demo-tabs/demo-tabs.component.html
@@ -96,7 +96,7 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock>{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-tabs.component.html">{{ codeHTML }}</app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
