--- a/projects/components-demo/src/app/demos/demo-alert/demo-alert.component.html
+++ b/projects/components-demo/src/app/demos/demo-alert/demo-alert.component.html
@@ -100,7 +100,7 @@
         </tr>
       </table>
 
-      <h3>Methods (Alert Service)</h3>
+      <h3>Service Methods</h3>
       <table>
         <tr>
           <th>Name</th>
