Updates to nav-bar and footer bug fix.

--- a/projects/components-demo/src/app/navigation/navigation.component.html
+++ b/projects/components-demo/src/app/navigation/navigation.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar">
   <div class="logo">
-    <img src="assets/images/DevPro-Logo.png">
-    <span>DevPro Web Components</span>
+    <img src="assets/svg/devpro-fill.svg">
+        <span>Web Components</span>
+<!--    <img src="assets/images/DevPro-Logo.png">-->
+<!--    <span>DevPro Web Components</span>-->
   </div>
 
   <div class="headers">
