--- a/projects/components-demo/src/app/navigation/footer/footer.component.scss
+++ b/projects/components-demo/src/app/navigation/footer/footer.component.scss
@@ -1,10 +1,11 @@
 footer {
   position: relative;
+  width: auto;
   bottom: -1rem;
   left: 0.5rem;
+  margin-left: 14.9rem;
   padding-right: 1rem;
   padding-left: 1rem;
-  width: 100%;
   background-color: rgba(209, 213, 219, 1);
 }
 
@@ -18,7 +19,6 @@ img {
   align-items: center;
   justify-content: space-between;
   padding: 0.75rem;
-  margin-left: 14rem;
 
   .footer-copyright {
     font-size: 0.75rem;
