Redid CodeBlocks and added HighlightJS.

--- a/projects/components-demo/src/app/codeblock/codeblock.component.html
+++ b/projects/components-demo/src/app/codeblock/codeblock.component.html
@@ -1,5 +1,5 @@
 <div class="noNameSpacer" *ngIf="!fileName"></div>
 <div class="fileName" *ngIf="fileName">{{ fileName }}</div>
 <div class="code-wrapper">
-  <ng-content></ng-content>
+  <code [highlight]="code"></code>
 </div>
