--- a/projects/components-demo/src/app/demos/demo-button/demo-button.component.html
+++ b/projects/components-demo/src/app/demos/demo-button/demo-button.component.html
@@ -87,7 +87,8 @@
         element and accept <code>click()</code> attributes. The element comes with a default configuration of basic
         and flat.</p>
       <h4>Import</h4>
-      <app-codeblock>Currently everything is imported by DevproComponentsModule.</app-codeblock>
+      <p>Currently everything is imported by <code>DevproComponentsModule</code>.</p>
+      <!--      <app-codeblock code="{{ codeImport }}"></app-codeblock>-->
 
       <h3>Properties</h3>
       <table>
@@ -137,16 +138,16 @@
       <h4>Color</h4>
       <p>The color can be changed with the <code>color</code> attribute. Options include: <code>basic</code>,
         <code>primary</code>, and <code>secondary</code>. The default is basic.</p>
-      <app-codeblock>{{ codeColor }}</app-codeblock>
+      <app-codeblock code="{{ codeColor }}"></app-codeblock>
       <h4>Stroked</h4>
       <p>The stroke styling can be enabled by setting the <code>stroked</code> attribute to true. The default is false.</p>
-      <app-codeblock>{{ codeStroked }}</app-codeblock>
+      <app-codeblock code="{{ codeStroked }}"></app-codeblock>
       <h4>Raised</h4>
       <p>The raised styling can be enabled by setting the <code>raised</code> attribute to true. The default is false.</p>
-      <app-codeblock>{{ codeRaised }}</app-codeblock>
+      <app-codeblock code="{{ codeRaised }}"></app-codeblock>
       <h4>Disabled</h4>
       <p>The disabled styling can be enabled by setting the <code>disabled</code> attribute to true. The default is false.</p>
-      <app-codeblock>{{ codeDisabled }}</app-codeblock>
+      <app-codeblock code="{{ codeDisabled }}"></app-codeblock>
 
 
       <h3>Methods</h3>
@@ -157,7 +158,7 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock fileName="demo-button.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-button.component.html" code="{{ codeHTML }}"></app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
