--- a/projects/components-demo/src/app/demos/demo-chip/demo-chip.component.html
+++ b/projects/components-demo/src/app/demos/demo-chip/demo-chip.component.html
@@ -17,11 +17,12 @@
       <h3>Getting Started</h3>
       <p>The chip component can be used as a single element or within another element such as a text-box.</p>
       <h4>Import</h4>
-      <app-codeblock>Currently everything is imported by DevproComponentsModule.</app-codeblock>
+      <p>Currently everything is imported by <code>DevproComponentsModule</code>.</p>
+      <!--      <app-codeblock code="{{ codeImport }}"></app-codeblock>-->
 
       <h3>Label</h3>
       <p>Labels can be added to the chip as an attribute. </p>
-      <app-codeblock>{{ codeLabel }}</app-codeblock>
+      <app-codeblock code="{{ codeLabel }}"></app-codeblock>
 
       <h3>Properties</h3>
       <table>
@@ -83,7 +84,7 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock fileName="demo-chip.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-chip.component.html" code="{{ codeHTML }}"></app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
