--- a/projects/components-demo/src/app/demos/demo-spinner/demo-spinner.component.html
+++ b/projects/components-demo/src/app/demos/demo-spinner/demo-spinner.component.html
@@ -45,7 +45,8 @@
       <p>The spinner component can be used in many applications. The element comes with a default configuration of blue
         coloring, style 1, and size extra small. But can be configured in several different ways.</p>
       <h4>Import</h4>
-      <app-codeblock>Currently everything is imported by DevproComponentsModule.</app-codeblock>
+      <p>Currently everything is imported by <code>DevproComponentsModule</code>.</p>
+      <!--      <app-codeblock code="{{ codeImport }}"></app-codeblock>-->
 
       <h3>Properties</h3>
       <table>
@@ -89,15 +90,15 @@
       <h4>Style</h4>
       <p>The style can be changed with the <code>spinnerStyle</code> attribute. Options include: <code>xs</code>,
         <code>sm</code>, <code>md</code>, and <code>lg</code>. The default is style1.</p>
-      <app-codeblock>{{ codeStyle }}</app-codeblock>
+      <app-codeblock code="{{ codeStyle }}"></app-codeblock>
       <h4>Size</h4>
       <p>The size can be changed with the <code>size</code> attribute. Options include: <code>style1</code>,
         <code>style2</code>, and <code>style3</code>'. The default is extra small.</p>
-      <app-codeblock>{{ codeSize }}</app-codeblock>
+      <app-codeblock code="{{ codeSize }}"></app-codeblock>
       <h4>Color</h4>
       <p>The color can be changed with the <code>color</code> attribute. Options include: <code>blue</code> and
         <code>white</code>. The default is blue.</p>
-      <app-codeblock>{{ codeColor }}</app-codeblock>
+      <app-codeblock code="{{ codeColor }}"></app-codeblock>
 
       <h3>Methods</h3>
       <p>None.</p>
@@ -107,7 +108,7 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock fileName="demo-spinner.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-spinner.component.html" code="{{ codeHTML }}"></app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
