--- a/projects/components-demo/src/app/codeblock/codeblock.component.scss
+++ b/projects/components-demo/src/app/codeblock/codeblock.component.scss
@@ -13,6 +13,11 @@
   background-color: #EEEEEE;
   padding-bottom: 1rem;
   font-family: Consolas, "courier new";
+
+  code {
+    padding-left: 1rem;
+    background-color: #EEEEEE;
+  }
 }
 
 .fileName {
