--- a/projects/components-demo/src/app/demos/demo-alert/demo-alert.component.html
+++ b/projects/components-demo/src/app/demos/demo-alert/demo-alert.component.html
@@ -19,12 +19,13 @@
         created
         and assigned its type, message, and details attribute.</p>
       <h4>Import</h4>
-      <app-codeblock>Currently everything is imported by DevproComponentsModule.</app-codeblock>
+      <p>Currently everything is imported by <code>DevproComponentsModule</code>.</p>
+      <!--      <app-codeblock code="{{ codeImport }}"></app-codeblock>-->
 
       <h3>Message, Details, and Type</h3>
       <p>The alerts message and details can be added to the alert easily through a service call. The options for type
         include: Success, Info, Warning, and Danger. Type is dictated by which function is called in the service.</p>
-      <app-codeblock>{{ codeServiceCall }}</app-codeblock>
+      <app-codeblock code="{{ codeServiceCall }}"></app-codeblock>
 
       <h3>Properties</h3>
       <table>
@@ -156,8 +157,8 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock fileName="demo-alert.component.html">{{ codeHTML }}</app-codeblock>
-      <app-codeblock fileName="demo-alert.component.ts">{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-alert.component.html" code="{{ codeHTML }}"></app-codeblock>
+      <app-codeblock fileName="demo-alert.component.ts" code="{{ codeTS }}"></app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
