--- a/projects/components-demo/src/app/demos/demo-dialog/demo-dialog.component.html
+++ b/projects/components-demo/src/app/demos/demo-dialog/demo-dialog.component.html
@@ -16,15 +16,16 @@
       <p>A dialog component can consist of <code>DialogHeaderComponent</code>, <code>DialogBodyComponent</code>, and a
         <code>DialogFooterComponent</code> like the above example, however other components can be injected.</p>
       <h4>Import</h4>
-      <app-codeblock>Currently everything is imported by DevproComponentsModule.</app-codeblock>
+      <p>Currently everything is imported by <code>DevproComponentsModule</code>.</p>
+      <!--      <app-codeblock code="{{ codeImport }}"></app-codeblock>-->
 
       <h3>Dialog Service</h3>
       <p>Dialog modals can be opened through the <code>DialogService</code> by calling the open function.</p>
-      <app-codeblock>{{ codeService }}</app-codeblock>
+      <app-codeblock code="{{ codeService }}"></app-codeblock>
       <h4>Dialog Config</h4>
       <p>The <code>DialogService</code> open function can take an optional <code>DialogConfig</code> with a data and
         size parameter.</p>
-      <app-codeblock>{{ codeConfig }}</app-codeblock>
+      <app-codeblock code="{{ codeConfig }}"></app-codeblock>
 
       <h3>Properties</h3>
       <table>
@@ -113,12 +114,12 @@
         library.
       </p>
       <h4>Dialog Demo Source</h4>
-      <app-codeblock fileName="demo-dialog.component.html">{{ codeHTML }}</app-codeblock>
-      <app-codeblock fileName="demo-dialog.component.ts">{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-dialog.component.html" code="{{ codeHTML }}"></app-codeblock>
+      <app-codeblock fileName="demo-dialog.component.ts" code="{{ codeTS }}"></app-codeblock>
 
       <h4>Random Component Source</h4>
-      <app-codeblock fileName="random-component.component.html">{{ codeHTMLRandom }}</app-codeblock>
-      <app-codeblock fileName="random-component.component.ts">{{ codeTSRandom }}</app-codeblock>
+      <app-codeblock fileName="random-component.component.html" code="{{ codeHTMLRandom }}"></app-codeblock>
+      <app-codeblock fileName="random-component.component.ts" code="{{ codeTSRandom }}"></app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
