--- a/projects/components-demo/src/app/demos/demo-multiselect/demo-multiselect.component.html
+++ b/projects/components-demo/src/app/demos/demo-multiselect/demo-multiselect.component.html
@@ -26,15 +26,16 @@
       <h3>Getting Started</h3>
       <p>To enable multi-select in the <code>SelectComponent</code>, add the <code>[multiselect]="true"</code> attribute.
         The multi-select component can be used with Angular Form Control.</p>
-      <app-codeblock>{{ codeGetStarted }}</app-codeblock>
+      <app-codeblock code="{{ codeGetStarted }}"></app-codeblock>
       <h4>Import</h4>
-      <app-codeblock>Currently everything is imported by DevproComponentsModule.</app-codeblock>
+      <p>Currently everything is imported by <code>DevproComponentsModule</code>.</p>
+      <!--      <app-codeblock code="{{ codeImport }}"></app-codeblock>-->
 
       <h3>Options</h3>
       <p>The values contained the <code>SelectComponent</code>'s drop down can be easily passed in with the <code>options</code>
       attribute. The options can be defined in a typescript file.</p>
-      <app-codeblock>{{ codeOptionsAttr }}</app-codeblock>
-      <app-codeblock>{{ codeOptions }}</app-codeblock>
+      <app-codeblock code="{{ codeOptionsAttr }}"></app-codeblock>
+      <app-codeblock code="{{ codeOptions }}"></app-codeblock>
 
       <h3>Properties</h3>
       <table>
@@ -121,8 +122,8 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock fileName="demo-multiselect.component.html">{{ codeHTML }}</app-codeblock>
-      <app-codeblock fileName="demo-multiselect.component.ts">{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-multiselect.component.html" code="{{ codeHTML }}"></app-codeblock>
+      <app-codeblock fileName="demo-multiselect.component.ts" code="{{ codeTS }}"></app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
