--- a/projects/components-demo/src/app/demos/demo-slide-toggle/demo-slide-toggle.component.html
+++ b/projects/components-demo/src/app/demos/demo-slide-toggle/demo-slide-toggle.component.html
@@ -45,18 +45,19 @@
       <p>The slide toggle component can be used as a single basic toggle or grouped together with the
         <code>SlideGroupComponent</code> component for multi-selection.</p>
       <h4>Import</h4>
-      <app-codeblock>Currently everything is imported by DevproComponentsModule.</app-codeblock>
+      <p>Currently everything is imported by <code>DevproComponentsModule</code>.</p>
+      <!--      <app-codeblock code="{{ codeImport }}"></app-codeblock>-->
 
       <h3>Label</h3>
       <p>Labels can be added to the slide toggle as an attribute. Clicking on the label will also toggle the slide
         on state.</p>
-      <app-codeblock>{{ codeLabel }}</app-codeblock>
+      <app-codeblock code="{{ codeLabel }}"></app-codeblock>
 
       <h3>Value and Forms</h3>
       <p>Value can be assigned to each toggle as an attribute. Adding a <code>FormControlDirective</code> to the
         <code>SlideGroupComponent</code> or and individual <code>SlideToggleComponent</code> will allow you to utilize
         the information each button is intended to provide.</p>
-      <app-codeblock>{{ codeValue }}</app-codeblock>
+      <app-codeblock code="{{ codeValue }}"></app-codeblock>
 
       <h3>Properties</h3>
       <table>
@@ -137,7 +138,7 @@
       <p>The default styling for the slide toggle is more self contained and suited for stacking several together.
         If you prefer the asymmetrical larger styling it can be enabled by setting the <code>alternateStyling</code>
         attribute to 'true'.</p>
-      <app-codeblock>{{ codeAltStyle }}</app-codeblock>
+      <app-codeblock code="{{ codeAltStyle }}"></app-codeblock>
 
       <h3>Methods</h3>
       <p>None.</p>
@@ -147,8 +148,8 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock fileName="demo-slide-toggle.component.html">{{ codeHTML }}</app-codeblock>
-      <app-codeblock fileName="demo-slide-toggle.component.ts">{{ codeTS }}</app-codeblock>
+      <app-codeblock fileName="demo-slide-toggle.component.html" code="{{ codeHTML }}"></app-codeblock>
+      <app-codeblock fileName="demo-slide-toggle.component.ts" code="{{ codeTS }}"></app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
