--- a/projects/components-demo/src/app/demos/demo-tabs/demo-tabs.component.html
+++ b/projects/components-demo/src/app/demos/demo-tabs/demo-tabs.component.html
@@ -30,13 +30,14 @@
       <h3>Getting Started</h3>
       <p>The tabs component does not function on its own and must be grouped together with the
         <code>TabGroupComponent</code> so that only one tab is displayed at a time.</p>
-      <app-codeblock>{{ codeGroup }}</app-codeblock>
+      <app-codeblock code="{{ codeGroup }}"></app-codeblock>
       <h4>Import</h4>
-      <app-codeblock>Currently everything is imported by DevproComponentsModule.</app-codeblock>
+      <p>Currently everything is imported by <code>DevproComponentsModule</code>.</p>
+      <!--      <app-codeblock code="{{ codeImport }}"></app-codeblock>-->
 
       <h3>Label</h3>
       <p>Labels should be added to each tab component as an attribute. The label will be displayed as each tabs header text.</p>
-      <app-codeblock>{{ codeLabel }}</app-codeblock>
+      <app-codeblock code="{{ codeLabel }}"></app-codeblock>
 
       <h3>Properties</h3>
       <table>
@@ -96,7 +97,7 @@
     </dp-tab>
 
     <dp-tab label="Source Code">
-      <app-codeblock fileName="demo-tabs.component.html">{{ codeHTML }}</app-codeblock>
+      <app-codeblock fileName="demo-tabs.component.html" code="{{ codeHTML }}"></app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
