Chip bugfix and code cleanup.

--- a/projects/components-demo/src/app/demos/demo-chip/demo-chip.component.html
+++ b/projects/components-demo/src/app/demos/demo-chip/demo-chip.component.html
@@ -85,6 +85,7 @@
 
     <dp-tab label="Source Code">
       <app-codeblock fileName="demo-chip.component.html" code="{{ codeHTML }}"></app-codeblock>
+      <app-codeblock fileName="demo-chip.component.scss" code="{{ codeCSS }}"></app-codeblock>
     </dp-tab>
   </dp-tab-group>
 </div>
