--- a/projects/components-demo/src/app/setup/setup.component.html
+++ b/projects/components-demo/src/app/setup/setup.component.html
@@ -6,7 +6,7 @@
     DevPro components are available through NPM, once your application is setup run the following commands to install
     the library into your project:
   </p>
-  <app-codeblock>{{ codeInstall }}</app-codeblock>
+  <app-codeblock code="{{ codeInstall }}"></app-codeblock>
 </div>
 
 <div>
@@ -16,7 +16,7 @@
     following
     line in your <code>app.module.ts</code> file.
   </p>
-  <app-codeblock>{{ codeImport }}</app-codeblock>
+  <app-codeblock code="{{ codeImport }}"></app-codeblock>
 </div>
 
 <div>
@@ -24,7 +24,7 @@
   <p class="desc">The library requires a base css dependency.
     Import the <code>base.css</code> file into your projects <code>angular.json</code> file.
   </p>
-  <app-codeblock>{{ codeStyles }}</app-codeblock>
+  <app-codeblock code="{{ codeStyles }}"></app-codeblock>
 </div>
 
 <div>
@@ -33,7 +33,7 @@
     Some components utilize Angular animations. Import the <code>BrowserAnimationsModule</code> into your application
     module.
   </p>
-  <app-codeblock>{{ codeAnimations }}</app-codeblock>
+  <app-codeblock code="{{ codeAnimations }}"></app-codeblock>
 </div>
 
 <div>
