--- a/projects/devpro-component-library/src/lib/to-do/slide-toggle/slide-toggle.component.html
+++ b/projects/devpro-component-library/src/lib/to-do/slide-toggle/slide-toggle.component.html
@@ -1,5 +1,4 @@
-<label class="slide-toggle" (click)="onClick()"
-       [class.tw-slide-toggle-alt-styling]="alternateStyling">
+<label class="slide-toggle" (click)="onClick()">
 
   <div class="styling">
     <input type="checkbox"
